# rpi-dht22

./: .env.example  README.md  pyproject.toml
docs/diagrams/: rpizero2w-dht22.fzz
src/: read_sensor.py
src/rpi_dht22/: publish_sensor_data.py
