
[project]
name = "rpi-dht22"
version = "0.1.0"
description = "A Raspberry Pi project to read temperature and humidity and output to the console."
authors = [
    {name = "randusr836", email = "1752417+randusr836@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "adafruit-circuitpython-dht (>=4.0.9,<5.0.0)",
    "adafruit-blinka (>=8.0.0,<9.0.0)",
    "RPi.GPIO (>=0.7.0,<1.0.0)"
]

[project.scripts]
read-sensor = "rpi_dht22.read_sensor:main"


# [tool.poetry] section is not required for PEP 621 projects



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
